--- a/src/themes/material.css
+++ b/src/themes/material.css
@@ -1,10 +1,5 @@
-@import "../components/menu/menu.less";
-@import "../components/popover/popover.less";
-
 .dt.material {
   background: #fff;
-  -webkit-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.24);
-  -moz-box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.24);
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 1px 2px 0 rgba(0, 0, 0, 0.24);
 
   &.selectable:not(.checkboxable) {
@@ -31,10 +26,10 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.12);
 
     .dt-header-cell {
-      text-align: left;
-      padding: 0.5rem 1.2rem;
-      font-weight: 400;
       color: #757575;
+      font-weight: 400;
+      padding: 0.5rem 1.2rem;
+      text-align: left;
       vertical-align: bottom;
     }
 
@@ -47,36 +42,34 @@
   .dt-body {
     .dt-row-left {
       background-color: #fff;
+      background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAABCAYAAAD5PA/NAAAAFklEQVQIHWPSkNeSBmJhTQVtbiDNCgASagIIuJX8OgAAAABJRU5ErkJggg==);
       background-position: 100% 0;
       background-repeat: repeat-y;
-      background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAABCAYAAAD5PA/NAAAAFklEQVQIHWPSkNeSBmJhTQVtbiDNCgASagIIuJX8OgAAAABJRU5ErkJggg==);
     }
 
     .dt-row-right {
-      background-position: 0 0;
       background-color: #fff;
-      background-repeat: repeat-y;
       background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAABCAYAAAD5PA/NAAAAFklEQVQI12PQkNdi1VTQ5gbSwkAsDQARLAIGtOSFUAAAAABJRU5ErkJggg==);
+      background-position: 0 0;
+      background-repeat: repeat-y;
     }
   }
 
   .dt-body {
     .dt-row {
       .dt-cell {
-        text-align: left;
-        padding: 0.5rem 1.2rem;
-        vertical-align: top;
         border-top: 0;
-        -webkit-transition: width 0.3s ease;
-        -o-transition: width 0.3s ease;
+        padding: 0.5rem 1.2rem;
+        text-align: left;
         transition: width 0.3s ease;
+        vertical-align: top;
       }
 
       &:hover,
       &:hover .dt-row-block {
         background-color: #eee;
-        transition-property: background;
         transition-duration: 0.3s;
+        transition-property: background;
         transition-timing-function: linear;
       }
 
@@ -88,11 +81,11 @@
     }
 
     .dt-group-row {
-      text-align: left;
-      padding: 0.5rem 1.2rem;
-      vertical-align: top;
-      border-top: 0;
       background: #b6b6b6;
+      border-top: 0;
+      padding: 0.5rem 1.2rem;
+      text-align: left;
+      vertical-align: top;
     }
   }
 
@@ -101,8 +94,8 @@
     font-size: 16px;
 
     .page-count {
-      line-height: 50px;
       height: 50px;
+      line-height: 50px;
       padding: 0 1.2rem;
     }
 
@@ -110,20 +103,20 @@
       margin: 5px 10px;
 
       a {
-        height: 24px;
-        min-width: 24px;
-        line-height: 26px;
-        padding: 0 6px;
         border-radius: 3px;
-        margin: 6px 3px;
-        text-align: center;
-        vertical-align: top;
         color: rgba(0, 0, 0, 0.54);
+        height: 24px;
+        line-height: 26px;
+        margin: 6px 3px;
+        min-width: 24px;
+        padding: 0 6px;
+        text-align: center;
         text-decoration: none;
+        vertical-align: top;
 
         &:hover {
-          color: rgba(0, 0, 0, 0.75);
           background-color: rgba(158, 158, 158, 0.2);
+          color: rgba(0, 0, 0, 0.75);
         }
       }
 
@@ -137,9 +130,9 @@
       }
 
       .disabled a {
-        cursor: not-allowed;
-        color: rgba(0, 0, 0, 0.26) !important;
         background-color: transparent !important;
+        color: rgba(0, 0, 0, 0.26) !important;
+        cursor: not-allowed;
       }
 
       .active a {
@@ -150,134 +143,124 @@
   }
 
   .empty-row {
-    height: 50px;
-    text-align: left;
-    padding: 0.5rem 1.2rem;
-    vertical-align: top;
     border-top: 0;
+    height: 50px;
+    padding: 0.5rem 1.2rem;
+    text-align: left;
+    vertical-align: top;
   }
 
   .loading-row {
-    text-align: left;
-    padding: 0.5rem 1.2rem;
-    vertical-align: top;
     border-top: 0;
+    padding: 0.5rem 1.2rem;
+    text-align: left;
+    vertical-align: top;
   }
 }
 
 .dt-menu {
-  position: relative;
   display: inline-block;
   font-size: 14px;
+  position: relative;
 
   .dropdown-toggle {
-    text-decoration: none;
-    color: rgba(0, 0, 0, 0.26);
-    z-index: 2;
-    display: inline-block;
-    vertical-align: top;
-    margin: 0;
-    padding: 0;
+    background-color: transparent;
     border: none;
     border-radius: 2px;
-    background-color: transparent;
-    font-weight: 400;
-    text-align: center;
-    text-transform: uppercase;
+    color: rgba(0, 0, 0, 0.26);
     cursor: pointer;
+    display: inline-block;
+    font-weight: 400;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    text-decoration: none;
+    text-transform: uppercase;
+    vertical-align: top;
+    z-index: 2;
   }
 
   .dropdown-menu {
+    background: #fff;
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 2px 8px 0 rgba(0, 0, 0, 0.12);
     position: absolute;
     right: 0;
-    background: #fff;
     z-index: 99;
-    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.16), 0 2px 8px 0 rgba(0, 0, 0, 0.12);
 
     input[type='text'] {
-      padding: 10px 15px;
-      display: block;
-      width: 100%;
-      font-size: 16px;
-      outline: none;
       border: none;
       border-bottom: 1px solid #eee;
+      display: block;
+      font-size: 16px;
+      outline: none;
+      padding: 10px 15px;
+      width: 100%;
     }
   }
 }
 
-// props to http://codepen.io/Sambego/pen/zDLxe
+/* props to http://codepen.io/Sambego/pen/zDLxe */
 .dt-checkbox {
-  position: relative;
-  margin: 0.5rem;
+  cursor: pointer;
   font-family: Arial, sans-serif;
   line-height: 135%;
-  cursor: pointer;
+  margin: 0.5rem;
+  position: relative;
 
   input[type='checkbox'] {
-    position: relative;
-    margin: 0 1rem 0 0;
     cursor: pointer;
+    margin: 0 1rem 0 0;
     outline: none;
+    position: relative;
 
     &::before {
-      -webkit-transition: all 0.3s ease-in-out;
-      -moz-transition: all 0.3s ease-in-out;
-      transition: all 0.3s ease-in-out;
-      content: "";
-      position: absolute;
-      left: 0;
-      z-index: 1;
-      width: 1rem;
-      height: 1rem;
       border: 2px solid #f2f2f2;
+      content: "";
+      height: 1rem;
+      left: 0;
+      position: absolute;
+      transition: all 0.3s ease-in-out;
+      width: 1rem;
+      z-index: 1;
     }
 
     &:checked::before {
-      -webkit-transform: rotate(-45deg);
-      -moz-transform: rotate(-45deg);
-      -ms-transform: rotate(-45deg);
-      -o-transform: rotate(-45deg);
-      transform: rotate(-45deg);
-      height: 0.5rem;
       border-color: #009688;
-      border-top-style: none;
       border-right-style: none;
+      border-top-style: none;
+      height: 0.5rem;
+      transform: rotate(-45deg);
     }
 
     &::after {
+      background: #fff;
       content: "";
+      cursor: pointer;
+      height: 1.1rem;
+      left: 0;
       position: absolute;
       top: -0.125rem;
-      left: 0;
       width: 1.1rem;
-      height: 1.1rem;
-      background: #fff;
-      cursor: pointer;
     }
   }
 }
 
 @-webkit-keyframes slideUp {
   0% {
-    -webkit-transform: translateY(6.25rem);
     transform: translateY(6.25rem);
   }
 
   100% {
-    -webkit-transform: translateY(0);
     transform: translateY(0);
   }
 }
 
 @keyframes slideUp {
   0% {
-    -webkit-transform: translateY(6.25rem);
     transform: translateY(6.25rem);
   }
 
   100% {
-    -webkit-transform: translateY(0);
     transform: translateY(0);
   }
 }
@@ -287,48 +270,44 @@
  */
 .progress-linear {
   display: block;
-  position: relative;
-  width: 100%;
   height: 5px;
-  padding-top: 0 !important;
   margin-bottom: 0 !important;
   margin-top: -5px;
+  padding-top: 0 !important;
+  position: relative;
+  width: 100%;
 }
 
 .progress-linear .container {
-  display: block;
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  height: 5px;
-  -webkit-transform: translate(0, 0) scale(1, 1);
-  transform: translate(0, 0) scale(1, 1);
   background-color: rgb(170, 209, 249);
+  display: block;
+  height: 5px;
+  overflow: hidden;
+  position: relative;
+  transform: translate(0, 0) scale(1, 1);
+  width: 100%;
 }
 
 .progress-linear .bar {
-  -webkit-animation: query 0.8s infinite cubic-bezier(0.39, 0.575, 0.565, 1);
   animation: query 0.8s infinite cubic-bezier(0.39, 0.575, 0.565, 1);
-  transition: all 0.2s linear;
   background-color: rgb(16, 108, 200);
-  position: absolute;
-  left: 0;
-  top: 0;
   bottom: 0;
-  width: 100%;
   height: 5px;
+  left: 0;
+  position: absolute;
+  top: 0;
+  transition: all 0.2s linear;
+  width: 100%;
 }
 
 @-webkit-keyframes query {
   0% {
     opacity: 1;
-    -webkit-transform: translateX(35%) scale(0.3, 1);
     transform: translateX(35%) scale(0.3, 1);
   }
 
   100% {
     opacity: 0;
-    -webkit-transform: translateX(-50%) scale(0, 1);
     transform: translateX(-50%) scale(0, 1);
   }
 }
@@ -336,13 +315,11 @@
 @keyframes query {
   0% {
     opacity: 1;
-    -webkit-transform: translateX(35%) scale(0.3, 1);
     transform: translateX(35%) scale(0.3, 1);
   }
 
   100% {
     opacity: 0;
-    -webkit-transform: translateX(-50%) scale(0, 1);
     transform: translateX(-50%) scale(0, 1);
   }
 }
